test_report.txt

> react-typescript-starter@0.1.0 test
> react-scripts test "--coverage"

FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/cis-scheduler-team-20/cis-scheduler-team-20/node_modules/react-bootstrap/esm/ModalHeader.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){import classNames from 'classnames';
                                                                                      ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      3 | import { AddSemester } from "./AddSemester";
      4 | import { Button, Col, Form, Modal, ModalTitle, Row } from "react-bootstrap";
    > 5 | import ModalHeader from "react-bootstrap/esm/ModalHeader";
        | ^
      6 |
      7 | export function InsertSemesterModal({
      8 |     showModal,

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/components/InsertSemester.tsx:5:1)

---------------------------|---------|----------|---------|---------|-------------------
File                       | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
---------------------------|---------|----------|---------|---------|-------------------
All files                  |       0 |        0 |       0 |       0 |                   
 src                       |       0 |        0 |       0 |       0 |                   
  App.tsx                  |       0 |        0 |       0 |       0 | 17-36             
 src/Interfaces            |       0 |      100 |     100 |       0 |                   
  course.ts                |       0 |        0 |       0 |       0 |                   
  listOfPlans.ts           |       0 |      100 |     100 |       0 | 4                 
  origionalPlan.ts         |       0 |      100 |     100 |       0 | 3                 
  plan.ts                  |       0 |        0 |       0 |       0 |                   
  semester.ts              |       0 |        0 |       0 |       0 |                   
 src/components            |       0 |        0 |       0 |       0 |                   
  AddCourseButton.tsx      |       0 |      100 |       0 |       0 | 17-21             
  AddCourseToSemester.tsx  |       0 |        0 |       0 |       0 | 22-143            
  AddFormSemester.tsx      |       0 |      100 |       0 |       0 | 9-38              
  AddPlan.tsx              |       0 |      100 |       0 |       0 | 15-38             
  AddSemester.tsx          |       0 |        0 |       0 |       0 | 8-128             
  AddSemesterToPlan.tsx    |       0 |      100 |       0 |       0 | 7-93              
  AddTable.tsx             |       0 |      100 |       0 |       0 | 11-50             
  ClearSemesterButton.tsx  |       0 |      100 |       0 |       0 | 16-20             
  CourseModal.tsx          |       0 |      100 |       0 |       0 | 22                
  CourseTable.tsx          |       0 |        0 |       0 |       0 | 29-55             
  DeleteCourseButton.tsx   |       0 |      100 |       0 |       0 | 18-22             
  DeleteSemesterButton.tsx |       0 |      100 |       0 |       0 | 12-14             
  DisplayPlan.tsx          |       0 |        0 |       0 |       0 | 21-102            
  EditCourseButton.tsx     |       0 |      100 |       0 |       0 | 21-25             
  EditCourseInModal.tsx    |       0 |      100 |       0 |       0 | 22                
  InsertSemester.tsx       |       0 |        0 |       0 |       0 | 14-45             
  SemesterTable.tsx        |       0 |      100 |       0 |       0 | 41-53             
---------------------------|---------|----------|---------|---------|-------------------
Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        3.235 s
Ran all test suites.
